--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "vue": "^3.2.31",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-multiselect": "^2.1.7"
     }
 }
